Update docs and add test for Users endpoint
